--- a/src/git/gitPanel.html
+++ b/src/git/gitPanel.html
@@ -146,7 +146,7 @@
   <div class="section">
     <div class="section-header">
       <span class="section-title">Projects</span>
-      <span id="project-count" class="muted">0</span>
+      <button class="btn-action btn-sm" id="btn-add-project">+ Add Current</button>
     </div>
     <ul id="project-list" class="project-list"></ul>
     <div id="empty-state" class="empty-state hidden">
@@ -315,11 +315,9 @@ window.addEventListener('message', function(e) {
     allProfiles.push(msg.profile);
     renderProfiles();
   } else if (msg.type === 'accountAdded') {
-    allAccounts.push(msg.account);
-    renderAccounts();
+    vscode.postMessage({ type: 'getAccounts' });
   } else if (msg.type === 'accountRemoved') {
-    allAccounts = allAccounts.filter(function(a) { return a.id !== msg.accountId; });
-    renderAccounts();
+    vscode.postMessage({ type: 'getAccounts' });
   } else if (msg.type === 'accountUpdated') {
     vscode.postMessage({ type: 'getAccounts' });
   } else if (msg.type === 'sshKeyGenerated') {
@@ -329,6 +327,10 @@ window.addEventListener('message', function(e) {
 
 document.getElementById('btn-add').addEventListener('click', function() {
   vscode.postMessage({ type: 'addProject' });
+});
+
+document.getElementById('btn-add-project').addEventListener('click', function() {
+  vscode.postMessage({ type: 'addCurrentProject' });
 });
 
 document.getElementById('btn-refresh').addEventListener('click', function() {
